--- a/Exam/5.MD
+++ b/Exam/5.MD
@@ -62,7 +62,7 @@ namespace/apx-x9984574 created
 ```
 
 ### Get the list of nodes in JSON format and store it in a file at /opt/outputs/nodes-z3444kd9.json.
-
+Weight: 7
 ### Task completed
 ```
 controlplane ~ ➜  kubectl get nodes -o jsonpath='{.items[*].metadata.name}' > /opt/outputs/nodes-z3444kd9.json
