--- a/Exam/5.MD
+++ b/Exam/5.MD
@@ -70,3 +70,61 @@ controlplane ~ ➜  cat /opt/outputs/nodes-z3444kd9.json
 controlplane
 ```
 
+
+### Create a service messaging-service to expose the messaging application within the cluster on port 6379.
+
+### Use imperative commands.
+
+Weight: 12
+
+### Service: messaging-service , Port: 6379,  Type: ClusterIp,  Use the right labels
+
+```
+controlplane ~ ➜  kubectl expose pod messaging --port 6379 --name messaging-service
+service/messaging-service exposed
+
+controlplane ~ ➜  kubectl get svc
+NAME                TYPE        CLUSTER-IP     EXTERNAL-IP   PORT(S)    AGE
+kubernetes          ClusterIP   10.96.0.1      <none>        443/TCP    31m
+messaging-service   ClusterIP   10.108.14.21   <none>        6379/TCP   5s
+```
+
+
+### Create a deployment named hr-web-app using the image kodekloud/webapp-color with 2 replicas.
+
+### Name: hr-web-app /  Image: kodekloud/webapp-color /  Replicas: 2
+
+Weight: 11
+
+```
+controlplane ~ ➜  kubectl create deploy hr-web-app --image=kodekloud/webapp-color --replicas=2
+deployment.apps/hr-web-app created
+```
+
+
+### Create a static pod named static-busybox on the controlplane node that uses the busybox image and the command sleep 1000.
+
+### Name: static-busybox /  Image: busybox
+
+```
+controlplane ~ ➜  kubectl run static-busybox --image=busybox --dry-run=client -o yaml > static_pod.yml
+
+controlplane ~ ➜  vim static_pod.yml 
+
+controlplane ~ ➜  cat static_pod.yml
+apiVersion: v1
+kind: Pod
+metadata:
+  creationTimestamp: null
+  labels:
+    run: static-busybox
+  name: static-busybox
+spec:
+  containers:
+  - image: busybox
+    name: static-busybox
+    resources: {}
+  dnsPolicy: ClusterFirst
+  restartPolicy: Always
+status: {}
+``` 
