--- a/Exam/5.MD
+++ b/Exam/5.MD
@@ -106,12 +106,10 @@ deployment.apps/hr-web-app created
 
 ### Name: static-busybox /  Image: busybox
 
+Weight: 8
+
 ```
-controlplane ~ ➜  kubectl run static-busybox --image=busybox --dry-run=client -o yaml > static_pod.yml
-
-controlplane ~ ➜  vim static_pod.yml 
-
-controlplane ~ ➜  cat static_pod.yml
+controlplane ~ ➜  kubectl run static-busybox --image=busybox --dry-run=client -o yaml --command -- sleep 1000
 apiVersion: v1
 kind: Pod
 metadata:
@@ -121,10 +119,26 @@ metadata:
   name: static-busybox
 spec:
   containers:
-  - image: busybox
+  - command:
+    - sleep
+    - "1000"
+    image: busybox
     name: static-busybox
     resources: {}
   dnsPolicy: ClusterFirst
   restartPolicy: Always
 status: {}
+
+
+controlplane ~ ➜  cp static_pod.yml /etc/kubernetes/manifests/
+
+controlplane ~ ➜  kubectl get pods
+NAME                          READY   STATUS    RESTARTS   AGE
+hr-web-app-69dc84b878-5mcw7   1/1     Running   0          16m
+hr-web-app-69dc84b878-xtd7z   1/1     Running   0          16m
+messaging                     1/1     Running   0          38m
+nginx-pod                     1/1     Running   0          39m
+static-busybox-controlplane   1/1     Running   0          7s
+
+
 ``` 
