--- a/Exam/5.MD
+++ b/Exam/5.MD
@@ -1,11 +1,9 @@
-### Deploy a pod named nginx-pod using the nginx:alpine image.
+#### Deploy a pod named nginx-pod using the nginx:alpine image.
 Weight: 6
 
-### Once done, click on the Next Question button in the top right corner of this panel. You may navigate back and forth freely between all questions. Once done with all questions, click on End Exam. Your work will be validated at the end and score shown. Good Luck!
+#### Once done, click on the Next Question button in the top right corner of this panel. You may navigate back and forth freely between all questions. Once done with all questions, click on End Exam. Your work will be validated at the end and score shown. Good Luck!
 
-### Name: nginx-pod
-
-###  Image: nginx:alpine
+#### Name: nginx-pod / Image: nginx:alpine
 
 ``` 
 controlplane ~ ➜  kubectl run nginx-pod --image=nginx:alpine
@@ -17,14 +15,14 @@ nginx-pod   1/1     Running   0          6s
 
 ``` 
 
-### Deploy a messaging pod using the redis:alpine image with the labels set to tier=msg.
+#### Deploy a messaging pod using the redis:alpine image with the labels set to tier=msg.
 
-### Pod Name: messaging
+#### Pod Name: messaging
 Weight: 8
 
-### Image: redis:alpine
+#### Image: redis:alpine
 
-### Labels: tier=msg
+#### Labels: tier=msg
 
 ``` 
 controlplane ~ ➜  kubectl run messaging --image=redis:alpine --labels=tier=msg
@@ -49,11 +47,11 @@ messaging   1/1     Running   0          87s
 nginx-pod   1/1     Running   0          2m31s
 ``` 
 
-### Create a namespace named apx-x9984574.
+#### Create a namespace named apx-x9984574.
 
 Weight: 4
 
-### Namespace: apx-x9984574
+#### Namespace: apx-x9984574
 
 ```
 controlplane ~ ➜  kubectl create namespace apx-x9984574
@@ -61,9 +59,9 @@ namespace/apx-x9984574 created
 
 ```
 
-### Get the list of nodes in JSON format and store it in a file at /opt/outputs/nodes-z3444kd9.json.
+#### Get the list of nodes in JSON format and store it in a file at /opt/outputs/nodes-z3444kd9.json.
 Weight: 7
-### Task completed
+#### Task completed
 ```
 controlplane ~ ➜  kubectl get nodes -o jsonpath='{.items[*].metadata.name}' > /opt/outputs/nodes-z3444kd9.json
 controlplane ~ ➜  cat /opt/outputs/nodes-z3444kd9.json
@@ -71,13 +69,13 @@ controlplane
 ```
 
 
-### Create a service messaging-service to expose the messaging application within the cluster on port 6379.
+#### Create a service messaging-service to expose the messaging application within the cluster on port 6379.
 
-### Use imperative commands.
+#### Use imperative commands.
 
 Weight: 12
 
-### Service: messaging-service , Port: 6379,  Type: ClusterIp,  Use the right labels
+#### Service: messaging-service , Port: 6379,  Type: ClusterIp,  Use the right labels
 
 ```
 controlplane ~ ➜  kubectl expose pod messaging --port 6379 --name messaging-service
@@ -90,9 +88,9 @@ messaging-service   ClusterIP   10.108.14.21   <none>        6379/TCP   5s
 ```
 
 
-### Create a deployment named hr-web-app using the image kodekloud/webapp-color with 2 replicas.
+#### Create a deployment named hr-web-app using the image kodekloud/webapp-color with 2 replicas.
 
-### Name: hr-web-app /  Image: kodekloud/webapp-color /  Replicas: 2
+#### Name: hr-web-app /  Image: kodekloud/webapp-color /  Replicas: 2
 
 Weight: 11
 
@@ -102,9 +100,9 @@ deployment.apps/hr-web-app created
 ```
 
 
-### Create a static pod named static-busybox on the controlplane node that uses the busybox image and the command sleep 1000.
+#### Create a static pod named static-busybox on the controlplane node that uses the busybox image and the command sleep 1000.
 
-### Name: static-busybox /  Image: busybox
+#### Name: static-busybox /  Image: busybox
 
 Weight: 8
 
