--- a/Exam/5.MD
+++ b/Exam/5.MD
@@ -140,3 +140,38 @@ static-busybox-controlplane   1/1     Running   0          7s
 
 
 ``` 
+
+#### Create a POD in the finance namespace named temp-bus with the image redis:alpine.
+Weight: 12
+#### Name: temp-bus / Image Name: redis:alpine
+
+``` 
+
+controlplane /etc/kubernetes/manifests ➜  k run temp-bus --image=redis:alpine -n finance 
+pod/temp-bus created
+
+controlplane /etc/kubernetes/manifests ➜  k get pod -n finance 
+NAME       READY   STATUS    RESTARTS   AGE
+temp-bus   1/1     Running   0          9s
+
+``` 
+
+
+#### A new application orange is deployed. There is something wrong with it. Identify and fix the issue.
+
+Weight: 8
+
+#### Issue fixed
+
+
+
+
+#### Expose the hr-web-app as service hr-web-app-service application on port 30082 on the nodes on the cluster.
+
+Weight: 10
+
+#### The web application listens on port 8080.
+
+#### Name: hr-web-app-service / Type: NodePort /  Endpoints: 2 /  Port: 8080 / NodePort: 30082
+
+``` 
