--- a/Exam/5.MD
+++ b/Exam/5.MD
@@ -163,6 +163,28 @@ Weight: 8
 
 #### Issue fixed
 
+ontrolplane ~ ➜  k get pods
+NAME                          READY   STATUS                  RESTARTS      AGE
+hr-web-app-69dc84b878-l6nd2   1/1     Running                 0             3m26s
+hr-web-app-69dc84b878-n6cmf   1/1     Running                 0             3m26s
+messaging                     1/1     Running                 0             9m35s
+nginx-pod                     1/1     Running                 0             10m
+orange                        0/1     Init:CrashLoopBackOff   1 (14s ago)   16s
+static-busybox-controlplane   1/1     Running                 0             80s
+
+controlplane ~ ✖ kubectl get pod orange -o yaml > orange.yaml
+
+controlplane ~ ✖ kubectl apply -f static.yaml   [sleep command was wrong]
+pod/static-busybox created
+
+controlplane ~ ➜  k get pods
+NAME                          READY   STATUS    RESTARTS   AGE
+hr-web-app-69dc84b878-l6nd2   1/1     Running   0          7m16s
+hr-web-app-69dc84b878-n6cmf   1/1     Running   0          7m16s
+messaging                     1/1     Running   0          13m
+nginx-pod                     1/1     Running   0          14m
+static-busybox                1/1     Running   0          7s
+static-busybox-controlplane   1/1     Running   0          5m10s
 
 
 
