--- a/Exam/5.MD
+++ b/Exam/5.MD
@@ -197,3 +197,37 @@ Weight: 10
 #### Name: hr-web-app-service / Type: NodePort /  Endpoints: 2 /  Port: 8080 / NodePort: 30082
 
 ``` 
+controlplane ~ ✖ k expose deployment hr-web-app --port 8080 --type=NodePort --name=hr-web-app-service --dry-run=client -o yaml
+apiVersion: v1
+kind: Service
+metadata:
+  creationTimestamp: null
+  labels:
+    app: hr-web-app
+  name: hr-web-app-service
+spec:
+  ports:
+  - port: 8080
+    protocol: TCP
+    targetPort: 8080
+  selector:
+    app: hr-web-app
+  type: NodePort
+status:
+  loadBalancer: {}
+
+controlplane ~ ➜  k expose deployment hr-web-app --port 8080 --type=NodePort --name=hr-web-app-service --dry-run=client -o yaml > node_port.yml
+
+controlplane ~ ➜  vim node_Port.yml 
+
+controlplane ~ ✖ vim node_Port.yml 
+
+controlplane ~ ➜  kubectl apply -f node_Port.yml
+service/hr-web-app-service created
+
+controlplane ~ ➜  kubectl get svc
+NAME                 TYPE        CLUSTER-IP       EXTERNAL-IP   PORT(S)          AGE
+hr-web-app-service   NodePort    10.101.230.172   <none>        8080:30082/TCP   7s
+kubernetes           ClusterIP   10.96.0.1        <none>        443/TCP          29m
+messaging-service    ClusterIP   10.100.248.198   <none>        6379/TCP         19m
+```
