--- a/Exam/5.MD
+++ b/Exam/5.MD
@@ -231,3 +231,15 @@ hr-web-app-service   NodePort    10.101.230.172   <none>        8080:30082/TCP  
 kubernetes           ClusterIP   10.96.0.1        <none>        443/TCP          29m
 messaging-service    ClusterIP   10.100.248.198   <none>        6379/TCP         19m
 ```
+
+#### Use JSON PATH query to retrieve the osImages of all the nodes and store it in a file /opt/outputs/nodes_os_x43kj56.txt.
+
+#### The osImages are under the nodeInfo section under status of each node.
+
+```
+
+controlplane ~ ➜  kubectl get nodes -o jsonpath='{.items[*].status.nodeInfo.osImage}' 
+Ubuntu 18.04.6 LTS
+controlplane ~ ➜  kubectl get nodes -o jsonpath='{.items[*].status.nodeInfo.osImage}'  > /opt/outputs/nodes_os_x43kj56.txt
+
+```
