--- a/Exam/5.MD
+++ b/Exam/5.MD
@@ -233,6 +233,7 @@ messaging-service    ClusterIP   10.100.248.198   <none>        6379/TCP        
 ```
 
 #### Use JSON PATH query to retrieve the osImages of all the nodes and store it in a file /opt/outputs/nodes_os_x43kj56.txt.
+Weight: 6
 
 #### The osImages are under the nodeInfo section under status of each node.
 
@@ -243,3 +244,29 @@ Ubuntu 18.04.6 LTS
 controlplane ~ ➜  kubectl get nodes -o jsonpath='{.items[*].status.nodeInfo.osImage}'  > /opt/outputs/nodes_os_x43kj56.txt
 
 ```
+#### Create a Persistent Volume with the given specification.
+
+#### Volume Name: pv-analytics /  Storage: 100Mi / Access modes: ReadWriteMany / Host Path: /pv/data-analytics 
+
+``` 
+controlplane ~ ➜  kubectl apply -f pv.yaml 
+persistentvolume/pv-analytics created
+
+controlplane ~ ➜  cat pv.yaml
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: pv-analytics
+spec:
+  storageClassName: manual
+  capacity: 
+    storage: 100Mi
+  accessModes:
+    - ReadWriteMany
+  hostPath:
+    path: "/pv/data-analytics"
+
+controlplane ~ ➜  kubectl get pv
+NAME           CAPACITY   ACCESS MODES   RECLAIM POLICY   STATUS      CLAIM   STORAGECLASS   REASON   AGE
+pv-analytics   100Mi      RWX            Retain           Available           manual                  56s
+``` 
