--- a/Exam/5.MD
+++ b/Exam/5.MD
@@ -245,7 +245,7 @@ controlplane ~ ➜  kubectl get nodes -o jsonpath='{.items[*].status.nodeInfo.os
 
 ```
 #### Create a Persistent Volume with the given specification.
-
+Weight: 8
 #### Volume Name: pv-analytics /  Storage: 100Mi / Access modes: ReadWriteMany / Host Path: /pv/data-analytics 
 
 ``` 
