--- a/Exam/5.MD
+++ b/Exam/5.MD
@@ -177,6 +177,10 @@ controlplane ~ ✖ kubectl get pod orange -o yaml > orange.yaml
 controlplane ~ ✖ kubectl apply -f static.yaml   [sleep command was wrong]
 pod/static-busybox created
 
+or 
+
+kubectl replace -f /tmp/kubectl-edit-xxxx.yaml --force  [after edit]
+
 controlplane ~ ➜  k get pods
 NAME                          READY   STATUS    RESTARTS   AGE
 hr-web-app-69dc84b878-l6nd2   1/1     Running   0          7m16s
