--- a/Exam/6.MD
+++ b/Exam/6.MD
@@ -9,7 +9,8 @@ controlplane ~ ➜  export ETCDCTL_API=3
 
 controlplane ~ ➜  etcdctl snapshot -h
 
-controlplane ~ ✖ ls /etc/kubernetes/pki/etcd/ca.crt  ca.key  healthcheck-client.crt  healthcheck-client.key  peer.crt  peer.key  server.crt  server.key
+controlplane ~ ✖ ls /etc/kubernetes/pki/etcd/ca.crt  
+ca.key  healthcheck-client.crt  healthcheck-client.key  peer.crt  peer.key  server.crt  server.key
 
 controlplane ~ ➜  etcdctl snapshot save --cacert=/etc/kubernetes/pki/etcd/ca.crt --cert=/etc/kubernetes/pki/etcd/server.crt --endpoints=127.0.0.1:2379 --key=/etc/kubernetes/pki/etcd/server.key  /opt/etcd-backup.db
 
