--- a/Exam/5.MD
+++ b/Exam/5.MD
@@ -163,16 +163,17 @@ Weight: 8
 
 #### Issue fixed
 
+```
 ontrolplane ~ ➜  k get pods
 NAME                          READY   STATUS                  RESTARTS      AGE
 hr-web-app-69dc84b878-l6nd2   1/1     Running                 0             3m26s
 hr-web-app-69dc84b878-n6cmf   1/1     Running                 0             3m26s
 messaging                     1/1     Running                 0             9m35s
 nginx-pod                     1/1     Running                 0             10m
-orange                        0/1     Init:CrashLoopBackOff   1 (14s ago)   16s
+orange                        0/1     Init:CrashLoopBackOff   1 (14s ago)   16s   CrashLoopBackOff  mean pod issue and Init:CrashLoopBackOff  - container issue
 static-busybox-controlplane   1/1     Running                 0             80s
 
-controlplane ~ ✖ kubectl get pod orange -o yaml > orange.yaml
+controlplane ~ ✖ kubectl get pod orange -o yaml > orange.yaml   
 
 controlplane ~ ✖ kubectl apply -f static.yaml   [sleep command was wrong]
 pod/static-busybox created
@@ -181,7 +182,7 @@ or
 
 kubectl replace -f /tmp/kubectl-edit-xxxx.yaml --force  [after edit]
 
-controlplane ~ ➜  k get pods
+controlplane ~ ➜  k get pods 
 NAME                          READY   STATUS    RESTARTS   AGE
 hr-web-app-69dc84b878-l6nd2   1/1     Running   0          7m16s
 hr-web-app-69dc84b878-n6cmf   1/1     Running   0          7m16s
@@ -190,7 +191,7 @@ nginx-pod                     1/1     Running   0          14m
 static-busybox                1/1     Running   0          7s
 static-busybox-controlplane   1/1     Running   0          5m10s
 
-
+```
 
 #### Expose the hr-web-app as service hr-web-app-service application on port 30082 on the nodes on the cluster.
 
@@ -222,11 +223,11 @@ status:
 
 controlplane ~ ➜  k expose deployment hr-web-app --port 8080 --type=NodePort --name=hr-web-app-service --dry-run=client -o yaml > node_port.yml
 
-controlplane ~ ➜  vim node_Port.yml 
+controlplane ~ ➜  vim node_Port.yml  
 
 controlplane ~ ✖ vim node_Port.yml 
 
-controlplane ~ ➜  kubectl apply -f node_Port.yml
+controlplane ~ ➜  kubectl apply -f node_Port.yml 
 service/hr-web-app-service created
 
 controlplane ~ ➜  kubectl get svc
@@ -273,4 +274,4 @@ spec:
 controlplane ~ ➜  kubectl get pv
 NAME           CAPACITY   ACCESS MODES   RECLAIM POLICY   STATUS      CLAIM   STORAGECLASS   REASON   AGE
 pv-analytics   100Mi      RWX            Retain           Available           manual                  56s
-``` 
+ 
