--- a/Exam/6.MD
+++ b/Exam/6.MD
@@ -16,3 +16,70 @@ controlplane ~ ➜  etcdctl snapshot save --cacert=/etc/kubernetes/pki/etcd/ca.c
 
 ``` 
 
+
+#### Create a Pod called redis-storage with image: redis:alpine with a Volume of type emptyDir that lasts for the life of the Pod.
+
+Weight: 10
+
+#### Specs on the below. /  Pod named 'redis-storage' created /   Pod 'redis-storage' uses Volume type of emptyDir / Pod 'redis-storage' uses volumeMount with mountPath = /data/redis
+
+``` 
+controlplane ~ ✖ kubectl apply -f empty_pod.yaml 
+pod/redis-storage created
+
+controlplane ~ ➜  cat empty_pod.yaml 
+apiVersion: v1
+kind: Pod
+metadata:
+  name: redis-storage
+spec:
+  containers:
+  - image: redis:alpine
+    name: redis-storage
+    volumeMounts:
+    - mountPath: /data/redis
+      name: redis-storage
+  volumes:
+  - name: redis-storage
+    emptyDir: {}
+
+controlplane ~ ➜  kubectl get pods
+NAME            READY   STATUS    RESTARTS   AGE
+redis-storage   1/1     Running   0          50s
+
+controlplane ~ ✖ kubectl exec --stdin --tty redis-storage -- /bin/sh
+/data # 
+
+/data # df -h 
+Filesystem                Size      Used Available Use% Mounted on
+overlay                 969.0G    196.6G    772.4G  20% /
+tmpfs                   102.3G         0    102.3G   0% /proc/acpi
+udev                    102.3G         0    102.3G   0% /proc/keys
+udev                    102.3G         0    102.3G   0% /proc/timer_list
+udev                    102.3G         0    102.3G   0% /proc/sched_debug
+tmpfs                   102.3G         0    102.3G   0% /proc/scsi
+tmpfs                    64.0M         0     64.0M   0% /dev
+tmpfs                   102.3G         0    102.3G   0% /sys/fs/cgroup
+.                       969.0G    196.6G    772.4G  20% /data
+/dev/sda1               969.0G    196.6G    772.4G  20% /data/redis
+/dev/sda1               969.0G    196.6G    772.4G  20% /etc/hosts
+/dev/sda1               969.0G    196.6G    772.4G  20% /dev/termination-log
+.                       969.0G    196.6G    772.4G  20% /etc/hostname
+.                       969.0G    196.6G    772.4G  20% /etc/resolv.conf
+shm                      64.0M         0     64.0M   0% /dev/shm
+tmpfs                   204.5G     12.0K    204.5G   0% /run/secrets/kubernetes.io/serviceaccount
+udev                    102.3G         0    102.3G   0% /dev/null
+udev                    102.3G         0    102.3G   0% /dev/random
+udev                    102.3G         0    102.3G   0% /dev/full
+udev                    102.3G         0    102.3G   0% /dev/tty
+udev                    102.3G         0    102.3G   0% /dev/zero
+udev                    102.3G         0    102.3G   0% /dev/urandom
+udev                    102.3G         0    102.3G   0% /proc/kcore
+tmpfs                   102.3G         0    102.3G   0% /sys/firmware
+
+/data # uname -a
+Linux redis-storage 5.4.0-1092-gcp #101~18.04.1-Ubuntu SMP Mon Oct 17 18:29:06 UTC 2022 x86_64 Linux
+/data # ls -lh  /data/redis
+total 0      
+/data # exit
+
