--- a/Exam/6.MD
+++ b/Exam/6.MD
@@ -82,4 +82,9 @@ Linux redis-storage 5.4.0-1092-gcp #101~18.04.1-Ubuntu SMP Mon Oct 17 18:29:06 U
 /data # ls -lh  /data/redis
 total 0      
 /data # exit
+```
+
+#### Create a new pod called super-user-pod with image busybox:1.28. Allow the pod to be able to set system_time.
+
+#### The container should sleep for 4800 seconds. / Pod: super-user-pod /  Container Image: busybox:1.28 /SYS_TIME capabilities for the conatiner?
 
