--- a/Exam/6.MD
+++ b/Exam/6.MD
@@ -85,6 +85,6 @@ total 0
 ```
 
 #### Create a new pod called super-user-pod with image busybox:1.28. Allow the pod to be able to set system_time.
-
+Weight: 8
 #### The container should sleep for 4800 seconds. / Pod: super-user-pod /  Container Image: busybox:1.28 /SYS_TIME capabilities for the conatiner?
 
