--- a/Exam/6.MD
+++ b/Exam/6.MD
@@ -88,3 +88,27 @@ total 0
 Weight: 8
 #### The container should sleep for 4800 seconds. / Pod: super-user-pod /  Container Image: busybox:1.28 /SYS_TIME capabilities for the conatiner?
 
+```
+controlplane ~ ➜  kubectl apply  -f system.yaml 
+pod/super-user-pod created
+
+controlplane ~ ➜  kubectl get pods
+NAME             READY   STATUS    RESTARTS   AGE
+redis-storage    1/1     Running   0          27m
+super-user-pod   1/1     Running   0          5s
+
+controlplane ~ ➜  cat system.yaml 
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: super-user-pod
+spec:
+  containers:
+  - name: super-user-pod
+    image: busybox:1.28
+    command: ["sleep", "4800"]
+    securityContext:
+      capabilities:
+        add: ["SYS_TIME"]
+```
