--- a/Exam/6.MD
+++ b/Exam/6.MD
@@ -89,25 +89,33 @@ Weight: 8
 #### The container should sleep for 4800 seconds. / Pod: super-user-pod /  Container Image: busybox:1.28 /SYS_TIME capabilities for the conatiner?
 
 ```
-controlplane ~ ➜  kubectl apply  -f system.yaml 
+controlplane ~ ➜  kubectl run super-user-pod --image=busybox:1.28 --dry-run=client -o yaml --command -- sleep 4800 > super-user-pod.yaml
+
+controlplane ~ ➜  vim super-user-pod.yaml 
+
+controlplane ~ ➜  kubectl apply -f super-user-pod.yaml 
 pod/super-user-pod created
 
 controlplane ~ ➜  kubectl get pods
 NAME             READY   STATUS    RESTARTS   AGE
-redis-storage    1/1     Running   0          27m
-super-user-pod   1/1     Running   0          5s
+redis-storage    1/1     Running   0          3m24s
+super-user-pod   1/1     Running   0          4s
 
-controlplane ~ ➜  cat system.yaml 
----
+controlplane ~ ➜  cat super-user-pod.yaml 
 apiVersion: v1
 kind: Pod
 metadata:
+  creationTimestamp: null
+  labels:
+    run: super-user-pod
   name: super-user-pod
 spec:
   containers:
-  - name: super-user-pod
+  - command:
+    - sleep
+    - "4800"
     image: busybox:1.28
-    command: ["sleep", "4800"]
+    name: super-user-pod
     securityContext:
       capabilities:
         add: ["SYS_TIME"]
