--- a/Exam/6.MD
+++ b/Exam/6.MD
@@ -258,7 +258,7 @@ Events:
 
 Weight: 15
 
-#### Deployment : nginx-deploy. Image: nginx:1.16 / Image: nginx:1.16 / Task: Upgrade the version of the deployment to 1:17 /  Task: Record the changes for the image upgrade
+##### Deployment : nginx-deploy. Image: nginx:1.16 / Image: nginx:1.16 / Task: Upgrade the version of the deployment to 1:17 /  Task: Record the changes for the image upgrade
 
 ``` 
 controlplane ~ ➜  kubectl create deployment nginx-deploy --image=nginx:1.16 --replicas=1
