--- a/Exam/6.MD
+++ b/Exam/6.MD
@@ -167,17 +167,13 @@ spec:
   containers:
   - image: nginx
     name: use-pv
-  storageClassName: manual
-  capacity:
-    storage: 10Mi
-  accessModes:
-    - ReadWriteOnce
-  hostPath:
-    path: "/data"
-    resources: {}
-  dnsPolicy: ClusterFirst
-  restartPolicy: Always
-status: {}
+    volumeMounts:
+      - mountPath: "/data"
+        name: use-pv
+  volumes:
+    - name: use-pv
+      persistentVolumeClaim:
+        claimName: my-pvc
 
 controlplane ~ ➜  vim CKA/use-pv.yaml 
 
