--- a/Exam/6.MD
+++ b/Exam/6.MD
@@ -267,6 +267,12 @@ deployment.apps/nginx-deploy image updated
 controlplane ~ ➜  kubectl rollout status deployment/nginx-deploy
 deployment "nginx-deploy" successfully rolled out
 
+controlplane ~ ➜  kubectl rollout history deployment nginx-deploy 
+deployment.apps/nginx-deploy 
+REVISION  CHANGE-CAUSE
+1         <none>
+2         kubectl set image deployment/nginx-deploy nginx=nginx:1.17 --record=true
+
 controlplane ~ ➜  kubectl describe deployments.apps nginx-deploy 
 Name:                   nginx-deploy
 Namespace:              default
