--- a/Exam/6.MD
+++ b/Exam/6.MD
@@ -415,3 +415,46 @@ no
 
 #### Pod: nginx-resolver created /  Service DNS Resolution recorded correctly /  Pod DNS resolution recorded correctly
 
+```
+controlplane ~ ➜  kubectl run buzybox --image=busybox:1.28 --command -- sleep 4800 
+pod/buzybox created
+
+controlplane ~ ➜  kubectl exec buzybox -- date
+Sat Nov  5 08:19:41 UTC 2022
+
+controlplane ~ ➜  kubectl exec buzybox -- nslookup nginx-resolver
+Server:    10.96.0.10
+Address 1: 10.96.0.10 kube-dns.kube-system.svc.cluster.local
+
+nslookup: can't resolve 'nginx-resolver'
+command terminated with exit code 1
+
+controlplane ~ ✖ kubectl exec buzybox -- nslookup nginx-resolver-service
+Server:    10.96.0.10
+Address 1: 10.96.0.10 kube-dns.kube-system.svc.cluster.local
+
+Name:      nginx-resolver-service
+Address 1: 10.107.65.170 nginx-resolver-service.default.svc.cluster.local
+
+controlplane ~ ➜  kubectl exec buzybox -- nslookup nginx-resolver-service > /root/CKA/nginx.svc
+
+controlplane ~ ➜  kubectl get pod -o wide
+NAME                            READY   STATUS    RESTARTS   AGE   IP            NODE     NOMINATED NODE   READINESS GATES
+buzybox                         1/1     Running   0          57s   10.50.192.6   node01   <none>           <none>
+nginx-deploy-75d47c9469-8szpq   1/1     Running   0          24m   10.50.192.5   node01   <none>           <none>
+nginx-resolver                  1/1     Running   0          11m   10.50.192.4   node01   <none>           <none>
+redis-storage                   1/1     Running   0          34m   10.50.192.1   node01   <none>           <none>
+super-user-pod                  1/1     Running   0          30m   10.50.192.2   node01   <none>           <none>
+use-pv                          1/1     Running   0          27m   10.50.192.3   node01   <none>           <none>
+
+
+controlplane ~ ✖ kubectl exec buzybox -- nslookup 10-50-192-4.default.pod.cluster.local
+Server:    10.96.0.10
+Address 1: 10.96.0.10 kube-dns.kube-system.svc.cluster.local
+
+Name:      10-50-192-4.default.pod.cluster.local
+Address 1: 10.50.192.4 10-50-192-4.nginx-resolver-service.default.svc.cluster.local
+
+controlplane ~ ➜  kubectl exec buzybox -- nslookup 10-50-192-4.default.pod.cluster.local > /root/CKA/nginx.pod
+
+```
