--- a/Exam/6.MD
+++ b/Exam/6.MD
@@ -314,7 +314,7 @@ Events:
 #### Create a new user called john. Grant him access to the cluster. John should have permission to create, list, get, update and delete pods in the development namespace . The private key exists in the location: /root/CKA/john.key and csr at /root/CKA/john.csr.
 
 #### Important Note: As of kubernetes 1.19, the CertificateSigningRequest object expects a signerName.
-
+Weight: 15
 #### Please refer the documentation to see an example. The documentation tab is available at the top right of terminal.
 
 #### CSR: john-developer Status:Approved / Role Name: developer, namespace: development, Resource: Pods /  Access: User 'john' has appropriate permissions
@@ -412,7 +412,7 @@ no
 ``` 
 
 #### Create a nginx pod called nginx-resolver using image nginx, expose it internally with a service called nginx-resolver-service. Test that you are able to look up the service and pod names from within the cluster. Use the image: busybox:1.28 for dns lookup. Record results in /root/CKA/nginx.svc and /root/CKA/nginx.pod
-
+Weight: 15
 #### Pod: nginx-resolver created /  Service DNS Resolution recorded correctly /  Pod DNS resolution recorded correctly
 
 ```
