--- a/Exam/7.MD
+++ b/Exam/7.MD
@@ -3,9 +3,7 @@
 Weight: 12
 #### ServiceAccount: pvviewer /  ClusterRole: pvviewer-role / ClusterRoleBinding: pvviewer-role-binding /Pod: pvviewer / Pod configured to use ServiceAccount pvviewer ?
 
-
 ```
-
 controlplane ~ ➜  kubectl create serviceaccount pvviewer
 serviceaccount/pvviewer created
 
@@ -99,7 +97,7 @@ Events:
 
 #### Answer should be in the format: InternalIP of controlplane<space>InternalIP of node01 (in a single line)
 
-  ``` 
+``` 
 controlplane ~ ➜  kubectl get nodes -o json |jq -c paths
 ["apiVersion"]
 ["items"]
@@ -128,4 +126,32 @@ controlplane ~ ➜  kubectl get nodes -o json |jq -c paths
 ["items",0,"spec","podCIDRs"]
 ["items",0,"spec","podCIDRs",0]
 
-# kubectl get nodes -o jsonpath='{.items[*].status.addresses[?(@.type=="InternalIP")].address}'
+ kubectl get nodes -o jsonpath='{.items[*].status.addresses[?(@.type=="InternalIP")].address}'
+```
+
+  
+#### Create a pod called multi-pod with two containers.
+Container 1, name: alpha, image: nginx
+Container 2: name: beta, image: busybox, command: sleep 4800
+
+Environment Variables:
+container 1:
+name: alpha
+
+Container 2:
+name: beta
+
+Pod Name: multi-pod
+
+Container 1: alpha
+
+Container 2: beta
+
+Container beta commands set correctly?
+
+Container 1 Environment Value Set
+
+Container 2 Environment Value Set
+
+``` 
+  
