--- a/Exam/7.MD
+++ b/Exam/7.MD
@@ -131,8 +131,9 @@ controlplane ~ ➜  kubectl get nodes -o json |jq -c paths
 
   
 #### Create a pod called multi-pod with two containers.
-Container 1, name: alpha, image: nginx
-Container 2: name: beta, image: busybox, command: sleep 4800
+####Container 1, name: alpha, image: nginx
+#### Container 2: name: beta, image: busybox, command: sleep 4800
+ Weight: 12
 
 Environment Variables:
 container 1:
@@ -154,4 +155,24 @@ Container 1 Environment Value Set
 Container 2 Environment Value Set
 
 ``` 
+
+kubectl run multi-pod --image=buzybox --dry-run=client -o yaml --command -- sleep 4800 > multipad.yam
   
+---
+apiVersion: v1
+kind: Pod
+metadata:
+  name: multi-pod
+spec:
+  containers:
+  - image: nginx
+    name: alpha
+    env:
+    - name: name
+      value: alpha
+  - image: busybox
+    name: beta
+    command: ["sleep", "4800"]
+    env:
+    - name: name
+      value: beta
