--- a/Exam/6.MD
+++ b/Exam/6.MD
@@ -14,6 +14,12 @@ ca.key  healthcheck-client.crt  healthcheck-client.key  peer.crt  peer.key  serv
 
 controlplane ~ ➜  etcdctl snapshot save --cacert=/etc/kubernetes/pki/etcd/ca.crt --cert=/etc/kubernetes/pki/etcd/server.crt --endpoints=127.0.0.1:2379 --key=/etc/kubernetes/pki/etcd/server.key  /opt/etcd-backup.db
 
+Test our backup of file
+ETCDCTL_API=3 etcdctl --write-out=table snapshot status snapshotdb
+
+Restore etcd from a backup file:
+ETCDCTL_API=3 etcdctl snapshot restore tmp/etcd-backup.db  --data-dir /var/lib/etcd-backup --cacert /etc/kubernetes/pki/etcd/ca.crt --cert /etc/kubernetes/pki/etcd/server.crt --key /etc/kubernetes/pki/etcd/server.key
+
 ``` 
 
 
