--- a/Exam/7.MD
+++ b/Exam/7.MD
@@ -16,6 +16,16 @@ error: serviceaccount must be <namespace>:<name>
 controlplane ~ ✖ kubectl create clusterrolebinding pvviewer-role-binding --clusterrole=pvviewer-role --serviceaccount=default:pvviewer
 clusterrolebinding.rbac.authorization.k8s.io/pvviewer-role-binding created
 
+kubectl auth can-i <verb> <resource> --as=system:serviceaccount:<namespace>:<serviceaccountname> [-n <namespace>]
+
+controlplane ~ ✖ kubectl auth can-i list PersistentVolumes --as system:serviceaccount:default:pvviewer
+Warning: resource 'persistentvolumes' is not namespace scoped
+yes
+
+controlplane ~ ➜  kubectl auth can-i create PersistentVolumes --as system:serviceaccount:default:pvviewer
+Warning: resource 'persistentvolumes' is not namespace scoped
+no
+
 controlplane ~ ➜  kubectl run pvviewer --image=redis --dry-run=client -o yaml
 apiVersion: v1
 kind: Pod
