--- a/Exam/7.MD
+++ b/Exam/7.MD
@@ -186,3 +186,31 @@ spec:
     env:
     - name: name
       value: beta
+
+ ``` 
+#### Create a Pod called non-root-pod , image: redis:alpine
+#### runAsUser: 1000 / fsGroup: 2000
+
+Pod non-root-pod fsGroup configured
+Pod non-root-pod runAsUser configured
+  
+ ```
+  controlplane ~ ➜  kubectl run non-root-pod --image=redis:alpine --dry-run=client -o yaml > non-root.yaml
+
+controlplane ~ ➜  vim non-root.yaml 
+
+controlplane ~ ➜  cat non-root.yaml 
+apiVersion: v1
+kind: Pod
+metadata:
+  creationTimestamp: null
+  labels:
+    run: non-root-pod
+  name: non-root-pod
+spec:
+  containers:
+  - image: redis:alpine
+    name: non-root-pod
+  securityContext:
+    runAsUser: 1000
+    fsGroup: 2000
