--- a/Exam/7.MD
+++ b/Exam/7.MD
@@ -190,6 +190,7 @@ spec:
  ``` 
 #### Create a Pod called non-root-pod , image: redis:alpine
 #### runAsUser: 1000 / fsGroup: 2000
+Weight: 8
 
 Pod non-root-pod fsGroup configured
 Pod non-root-pod runAsUser configured
