--- a/Exam/7.MD
+++ b/Exam/7.MD
@@ -198,23 +198,30 @@ Pod non-root-pod runAsUser configured
  ```
   controlplane ~ ➜  kubectl run non-root-pod --image=redis:alpine --dry-run=client -o yaml > non-root.yaml
 
-controlplane ~ ➜  vim non-root.yaml 
+controlplane ~ ✖ vim non-root.yaml
 
-controlplane ~ ➜  cat non-root.yaml 
+controlplane ~ ➜  kubectl create -f non-root.yaml
+pod/non-root-pod created
+
+controlplane ~ ➜  cat non-root.yaml
 apiVersion: v1
 kind: Pod
 metadata:
-  creationTimestamp: null
   labels:
     run: non-root-pod
   name: non-root-pod
 spec:
-  containers:
-  - image: redis:alpine
-    name: non-root-pod
   securityContext:
     runAsUser: 1000
     fsGroup: 2000
+  containers:
+  - image: redis:alpine
+    name: non-root-pod
+
+controlplane ~ ➜  kubectl get pods
+NAME           READY   STATUS    RESTARTS   AGE
+multi-pod      2/2     Running   0          9m32s
+non-root-pod   1/1     Running   0          12s
 ``` 
   
 #### We have deployed a new pod called np-test-1 and a service called np-test-service. Incoming connections to this service are not working. Troubleshoot and fix it.
