--- a/Exam/7.MD
+++ b/Exam/7.MD
@@ -236,3 +236,45 @@ non-root-pod   1/1     Running   0          12s
 #### NetWorkPolicy: Correct Port?
 
 #### NetWorkPolicy: Applied to correct Pod?
+
+```
+controlplane ~ ➜  kubectl get pods 
+NAME           READY   STATUS    RESTARTS   AGE
+multi-pod      2/2     Running   0          3m55s
+non-root-pod   1/1     Running   0          31s
+np-test-1      1/1     Running   0          12s
+pvviewer       1/1     Running   0          28m
+
+
+controlplane ~ ➜  kubectl get svc -o wide
+NAME              TYPE        CLUSTER-IP      EXTERNAL-IP   PORT(S)   AGE     SELECTOR
+kubernetes        ClusterIP   10.96.0.1       <none>        443/TCP   45m     <none>
+np-test-service   ClusterIP   10.101.137.32   <none>        80/TCP    3m48s   run=np-test-1
+
+  
+controlplane ~ ➜  kubectl run new --image=alpine/curl --rm -it -- sh
+If you don't see a command prompt, try pressing enter.
+/ # curl np-test-service
+^C
+/ # 
+
+# cat ingress-to-nptest.yml
+apiVersion: networking.k8s.io/v1
+kind: NetworkPolicy
+metadata:
+  name: ingress-to-nptest
+  namespace: default
+spec:
+  podSelector:
+    matchLabels:
+      run: np-test-1
+  policyTypes:
+    - Ingress
+  ingress:
+    - ports:
+      - protocol: TCP
+        port: 80
+  
+  #kubectl create -f ingress-to-nptest.yml
+  
+  
