--- a/Exam/7.MD
+++ b/Exam/7.MD
@@ -277,4 +277,6 @@ spec:
   
   #kubectl create -f ingress-to-nptest.yml
   
-  
+controlplane ~ ➜  kubectl run new --image=alpine/curl --rm -it -- sh
+If you don't see a command prompt, try pressing enter.
+/ # curl np-test-service
