--- a/Exam/7.MD
+++ b/Exam/7.MD
@@ -258,6 +258,30 @@ If you don't see a command prompt, try pressing enter.
 ^C
 / # 
 
+
+controlplane ~ ➜  kubectl describe svc np-test-service
+Name:              np-test-service
+Namespace:         default
+Labels:            run=np-test-1
+Annotations:       <none>
+Selector:          run=np-test-1
+Type:              ClusterIP
+IP Family Policy:  SingleStack
+IP Families:       IPv4
+IP:                10.106.178.66
+IPs:               10.106.178.66
+Port:              <unset>  80/TCP
+TargetPort:        80/TCP
+Endpoints:         10.50.192.1:80
+Session Affinity:  None
+Events:            <none>
+
+controlplane ~ ➜  vim ingress.yml
+
+controlplane ~ ➜  kubectl create -f ingress.yml 
+networkpolicy.networking.k8s.io/ingress-to-nptest created
+
+
 # cat ingress-to-nptest.yml
 apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
@@ -275,8 +299,32 @@ spec:
       - protocol: TCP
         port: 80
   
-  #kubectl create -f ingress-to-nptest.yml
+#kubectl create -f ingress-to-nptest.yml
   
-controlplane ~ ➜  kubectl run new --image=alpine/curl --rm -it -- sh
+controlplane ~ ➜  kubectl run new --image=alpine/curl --rm -it -- sh 
 If you don't see a command prompt, try pressing enter.
 / # curl np-test-service
+<!DOCTYPE html>
+<html>
+<head>
+<title>Welcome to nginx!</title>
+<style>
+html { color-scheme: light dark; }
+body { width: 35em; margin: 0 auto;
+font-family: Tahoma, Verdana, Arial, sans-serif; }
+</style>
+</head>
+<body>
+<h1>Welcome to nginx!</h1>
+<p>If you see this page, the nginx web server is successfully installed and
+working. Further configuration is required.</p>
+
+<p>For online documentation and support please refer to
+<a href="http://nginx.org/">nginx.org</a>.<br/>
+Commercial support is available at
+<a href="http://nginx.com/">nginx.com</a>.</p>
+
+<p><em>Thank you for using nginx.</em></p>
+</body>
+</html>
+/ # 
