--- a/Exam/7.MD
+++ b/Exam/7.MD
@@ -344,3 +344,59 @@ Commercial support is available at
 ####pod 'dev-redis' (no tolerations) is not scheduled on node01?
 
 #### Create a pod 'prod-redis' to run on node01  
+
+controlplane ~ ➜  kubectl taint nodes node01 env_type=production:NoSchedule
+node/node01 tainted
+
+controlplane ~ ➜  kubectl run dev-redis --image=redis:alpine 
+pod/dev-redis created
+
+controlplane ~ ➜  kubectl get pods
+NAME        READY   STATUS    RESTARTS   AGE
+dev-redis   1/1     Running   0          5s
+np-test-1   1/1     Running   0          9m7s
+
+
+controlplane ~ ✖ kubectl get pods -o wide
+NAME        READY   STATUS    RESTARTS   AGE     IP            NODE           NOMINATED NODE   READINESS GATES
+dev-redis   1/1     Running   0          34s     10.50.0.4     controlplane   <none>           <none>
+np-test-1   1/1     Running   0          9m36s   10.50.192.1   node01         <none>           <none>
+
+controlplane ~ ➜  kubectl run prod-redis --image=redis:alpine --dry-run=client -o yaml > taint_tolerte.yaml
+
+controlplane ~ ➜  vim taint_tolerte.yaml 
+  
+controlplane ~ ➜  cat taint_tolerte.yaml 
+apiVersion: v1
+kind: Pod
+metadata:
+  creationTimestamp: null
+  labels:
+    run: prod-redis
+  name: prod-redis
+spec:
+  containers:
+  - image: redis:alpine
+    name: prod-redis
+  tolerations:
+  - key: "env_type"
+    value: "production"
+    operator: "Equal"
+    effect: "NoSchedule"
+
+controlplane ~ ➜  kubectl create -f taint_tolerte.yaml 
+pod/prod-redis created
+
+controlplane ~ ➜  kubectl get pods
+NAME         READY   STATUS    RESTARTS   AGE
+dev-redis    1/1     Running   0          5m20s
+np-test-1    1/1     Running   0          14m
+prod-redis   1/1     Running   0          6s
+
+controlplane ~ ➜  kubectl get pods -o wide
+NAME         READY   STATUS    RESTARTS   AGE     IP            NODE           NOMINATED NODE   READINESS GATES
+dev-redis    1/1     Running   0          5m23s   10.50.0.4     controlplane   <none>           <none>
+np-test-1    1/1     Running   0          14m     10.50.192.1   node01         <none>           <none>
+prod-redis   1/1     Running   0          9s      10.50.192.2   node01         <none>           <none>
+  
+```
